<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LySchedules</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="action_about">About</string>
    <string name="nextText">up next</string>
    <string name="endtimeText">ends at</string>
    <string name="minuteText">minutes remaining</string>
    <string name="starttimeText">started at</string>
    <string name="inText">currently in</string>
    <string name="Settings">Settings</string>
    <string-array name="drawer_array">
        <item>Today</item>
        <item>All Schedules</item>
        <item>Settings</item>
        <item>Website</item>
    </string-array>
</resources>
