<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:weightSum="11">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:orientation="vertical">
        <com.asdar.lyschedules.RobotoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inText"
            android:id="@+id/inText"
            android:gravity="center"
            android:textColor="@color/darkgray"
            android:singleLine="false"
            android:textSize="22sp"
            />
        <com.asdar.lyschedules.RobotoTextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgray"
            android:id="@+id/current"
            android:textSize="30sp"
            android:textStyle="bold"
          />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:orientation="vertical">
        <com.asdar.lyschedules.RobotoTextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/starttimeText"
            android:textColor="@color/darkgray"
            android:singleLine="false"
            android:textSize="22sp"
            android:id="@+id/starttimeText"
            />
        <com.asdar.lyschedules.RobotoTextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgray"
            android:id="@+id/startime"
            android:textSize="30sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_gravity="center">
        <com.asdar.lyschedules.RobotoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgray"
            android:gravity="center"
            android:id="@+id/remain"
            android:textSize="100sp"
            android:textStyle="bold"
        />
        <com.asdar.lyschedules.RobotoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/lightgray"
            android:id="@+id/minuteText"
            android:text="@string/minuteText"
            android:textSize="30sp"
            android:textStyle="bold"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:orientation="vertical">
        <com.asdar.lyschedules.RobotoTextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endtimeText"
            android:textColor="@color/darkgray"
            android:singleLine="false"
            android:textSize="22sp"
            android:id="@+id/endtimeText"

            />
        <com.asdar.lyschedules.RobotoTextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgray"
            android:id="@+id/endtime"
            android:textSize="30sp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:orientation="vertical">
        <com.asdar.lyschedules.RobotoTextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nextText"
            android:textColor="@color/darkgray"
            android:singleLine="false"
            android:textSize="22sp"
            android:id="@+id/nextText"
            />
        <com.asdar.lyschedules.RobotoTextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgray"
            android:id="@+id/next"
            android:textSize="30sp"
            android:textStyle="bold"
            />
    </LinearLayout>

</LinearLayout>
